impl cross chain connect

--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -94,6 +94,14 @@ node.backup {
   ]
 }
 
+node.crossChain {
+  port = 15001
+  ip = [
+    # "chainId:ip",
+    # "chainId:ip"
+  ]
+}
+
 node {
   # trust node for solidity node
   # trustNode = "ip:port"
