rename the cross chain log

--- a/framework/src/main/resources/config-localtest.conf
+++ b/framework/src/main/resources/config-localtest.conf
@@ -5,9 +5,9 @@ net {
 
 storage {
   # Directory for storing persistent data
-  db.version = 1,
-  db.directory = "database",
-  index.directory = "index",
+  db.version = 2,
+  db.directory = "database1",
+  index.directory = "index1",
 
   # This configuration item is only for SolidityNode.
   # Turn off the index is "off", else "on".
@@ -65,6 +65,14 @@ node.backup {
   port = 10001
   priority = 8
   members = [
+  ]
+}
+
+node.crossChain {
+  port = 15001
+  ip = [
+    "127.0.0.1:15002",
+    # "ip:port"
   ]
 }
 
@@ -168,7 +176,7 @@ seed.node = {
   #   "ip:port"
   # ]
   ip.list = [
-    "127.0.0.1:6666",
+    //    "127.0.0.1:6666",
     //    "127.0.0.1:7777",
     //    "127.0.0.1:8888",
     //    "127.0.0.1:9999",
