--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -162,7 +162,9 @@ node {
   ]
 
   http {
+    fullNodeEnable = false
     fullNodePort = 8090
+    solidityEnable = false
     solidityPort = 8091
   }
 
