--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -162,9 +162,9 @@ node {
   ]
 
   http {
-    fullNodeEnable = false
+    fullNodeEnable = true
     fullNodePort = 8090
-    solidityEnable = false
+    solidityEnable = true
     solidityPort = 8091
   }
 
