feat(market): add config to allow market transaction in test

--- a/framework/src/main/resources/config-localtest.conf
+++ b/framework/src/main/resources/config-localtest.conf
@@ -274,13 +274,14 @@ vm = {
 }
 
 committee = {
-  allowCreationOfContracts = 1  //mainnet:0 (reset by committee),test:1
-  allowShieldedTransaction = 1 //mainnet:0 (reset by committee),test:1
-  allowMultiSign = 1 //mainnet:0 (reset by committee),test:1
+  allowCreationOfContracts = 1  // mainnet:0 (reset by committee),test:1
+  allowShieldedTransaction = 1 // mainnet:0 (reset by committee),test:1
+  allowMultiSign = 1 // mainnet:0 (reset by committee),test:1
   allowSameTokenName = 1
   allowTvmTransferTrc10 = 1
   allowTvmConstantinople = 1
   allowTvmSolidity059 = 1
+  allowMarketTransaction = 1
 }
 
 log.level = {
