--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ task sourceJar(type: Jar, dependsOn: classes) {
 repositories {
     mavenLocal()
     mavenCentral()
-    maven { url 'http://repo.spring.io/plugins-release' }
+    jcenter()
 }
 def versions = [
         checkstyle: '8.7',
