--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -251,16 +251,16 @@ startScripts.enabled = false
 run.enabled = false
 tasks.distTar.enabled = false
 
-createScript(project, 'org.tron.program.SolidityNode', 'SolidityNode')
-createScript(project, 'org.tron.program.FullNode', 'FullNode')
-createScript(project, 'org.tron.program.KeystoreFactory', 'KeystoreFactory')
-createScript(project, 'org.tron.program.DBConvert', 'DBConvert')
+//createScript(project, 'org.tron.program.SolidityNode', 'SolidityNode')
+//createScript(project, 'org.tron.program.FullNode', 'FullNode')
+//createScript(project, 'org.tron.program.KeystoreFactory', 'KeystoreFactory')
+//createScript(project, 'org.tron.program.DBConvert', 'DBConvert')
 
 artifacts {
-    archives(binaryRelease('buildSolidityNodeJar', 'SolidityNode', 'org.tron.program.SolidityNode'),
-            binaryRelease('buildFullNodeJar', 'FullNode', 'org.tron.program.FullNode'),
-            binaryRelease('buildKeystoreFactoryJar', 'KeystoreFactory', 'org.tron.program.KeystoreFactory'),
-            binaryRelease('buildDBConvertJar', 'DBConvert', 'org.tron.program.DBConvert'))
+    //archives(binaryRelease('buildSolidityNodeJar', 'SolidityNode', 'org.tron.program.SolidityNode'),
+            binaryRelease('buildFullNodeJar', 'FullNode', 'org.tron.program.FullNode')
+    //        binaryRelease('buildKeystoreFactoryJar', 'KeystoreFactory', 'org.tron.program.KeystoreFactory'),
+    //        binaryRelease('buildDBConvertJar', 'DBConvert', 'org.tron.program.DBConvert'))
 }
 
 task copyToParent(type: Copy) {
