fix check style problem

--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -544,6 +544,11 @@ event.subscribe = {
       enable = false
       topic = "contractlog"
     }
+    {
+      triggerName = "solidity" // solidity block event trigger, the value can't be modified
+      enable = true            // the default value is true
+      topic = "solidity"
+    }
   ]
 
   filter = {
