--- a/framework/src/main/resources/config-localtest.conf
+++ b/framework/src/main/resources/config-localtest.conf
@@ -96,9 +96,9 @@ node {
 
   minParticipationRate = 0
 
-  fullNodeAllowShieldedTransaction = true
+  # fullNodeAllowShieldedTransaction = true
 
-  zenTokenId = 1000001
+  # zenTokenId = 1000001
 
   # check the peer data transfer ,disconnect factor
   disconnectNumberFactor = 0.4
@@ -275,7 +275,7 @@ vm = {
 
 committee = {
   allowCreationOfContracts = 1  //mainnet:0 (reset by committee),test:1
-  allowShieldedTransaction = 1 //mainnet:0 (reset by committee),test:1
+  # allowShieldedTransaction = 1 //mainnet:0 (reset by committee),test:1
   allowMultiSign = 1 //mainnet:0 (reset by committee),test:1
   allowSameTokenName = 1
   allowTvmTransferTrc10 = 1
