--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -533,6 +533,11 @@ event.subscribe = {
       triggerName = "contractlog"
       enable = false
       topic = "contractlog"
+    },
+    {
+      triggerName = "solidity" // solidity block event trigger, the value can't be modified
+      enable = true            // the default value is true
+      topic = "solidity"
     }
   ]
 
