--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -154,7 +154,9 @@ node {
   ]
 
   http {
+    fullNodeEnable = true
     fullNodePort = 8090
+    solidityEnable = true
     solidityPort = 8091
   }
 
