--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ repositories {
     mavenLocal()
     mavenCentral()
     jcenter()
+    maven { url 'https://jitpack.io' }
 }
 def versions = [
         checkstyle: '8.7',
