--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ task sourceJar(type: Jar, dependsOn: classes) {
 repositories {
     mavenLocal()
     mavenCentral()
-    jcenter()
+    maven { url 'https://repo.spring.io/plugins-release' }
     maven { url 'https://jitpack.io' }
 }
 def versions = [
