set duplicate witness info

--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -207,6 +207,8 @@ node {
 
   # Limits the maximum number (default 700) of transaction from network layer
   # netMaxTrxPerSecond = 700
+
+  metricsEnable = true
 }
 
 ## rate limiter config
@@ -563,8 +565,4 @@ event.subscribe = {
     ]
   }
 
-}
-
-metrics = {
-  nodeMetricsEnable = true
 }
