--- a/build.gradle
+++ b/build.gradle
@@ -186,7 +186,7 @@ dependencies {
     compile group: 'org.pf4j', name: 'pf4j', version: '2.5.0'
 
     compile group: 'org.zeromq', name: 'jeromq', version: '0.5.0'
-    compile 'com.github.tronprotocol:zksnark-java-sdk:master-SNAPSHOT'
+    compile 'com.github.tronprotocol:zksnark-java-sdk:add_final_check_new-SNAPSHOT'
 
 }
 
