--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -119,7 +119,7 @@ node {
   udpNettyWorkThreadNum = 1
 
   # Number of validate sign thread, default availableProcessors / 2
-  validateSignThreadNum = 2
+  # validateSignThreadNum = 16
 
   connectFactor = 0.3
   activeConnectFactor = 0.1
