TIP128: finish http&GRPC filter, also fix some bugs & unit test

--- a/framework/src/test/resources/config-test.conf
+++ b/framework/src/test/resources/config-test.conf
@@ -96,6 +96,13 @@ node {
     version = 43 # 43: testnet; 101: debug
   }
 
+  http {
+      fullNodeEnable = true
+      fullNodePort = 8090
+      solidityEnable = true
+      solidityPort = 8091
+  }
+
   rpc {
     port = 50051
 
