--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -209,6 +209,13 @@ node {
   # netMaxTrxPerSecond = 700
 
   metricsEnable = true
+
+  # open the history query APIs(http&GRPC) when node is a lite fullNode,
+  # like {getBlockByNum, getBlockByID, getTransactionByID...}.
+  # default: false.
+  # note: above APIs may return null even if blocks and transactions actually are on the blockchain
+  # when opening on a lite fullnode. only open it if the consequences being clearly known
+  # openHistoryQueryWhenLiteFN = false
 }
 
 ## rate limiter config
