--- a/framework/src/test/resources/config-localtest.conf
+++ b/framework/src/test/resources/config-localtest.conf
@@ -5,7 +5,8 @@ net {
 
 storage {
   # Directory for storing persistent data
-  db.version = 1,
+  db.version = 2,
+  db.engine ="LEVELDB"
   db.directory = "database",
   index.directory = "index",
 
