--- a/framework/src/test/resources/config-localtest.conf
+++ b/framework/src/test/resources/config-localtest.conf
@@ -6,7 +6,7 @@ net {
 storage {
   # Directory for storing persistent data
   db.version = 2,
-  db.engine ="LEVELDB"
+  db.engine ="LEVELDB",
   db.directory = "database",
   index.directory = "index",
 
