--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,13 @@
-version: 2
-jobs:
-  build:
-    branches:
-      only:
-      - master
-      - develop
-      - addinCircleCI
-
-    docker:
-    - image: circleci/openjdk:8-jdk-browsers
-    working_directory: ~/java-tron
-    steps:
-    - checkout
-    - run:
-        name: multi_os_result
-        command: echo "curl http://60.205.215.34/multi_os_result"
-#
-#    - run:
-#        name: Daily Build Report
-#        command: curl http://47.95.206.44:50080/Daily_Build_Task_Report
-#
-#    - run:
-#        name: Download Links
-#        command: sh DownloadLinks.sh
-
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
+# Use a package of configuration called an orb.
+orbs:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
+workflows:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
+    jobs:
+      - welcome/run
