--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -516,19 +516,19 @@ committee = {
 
 event.subscribe = {
   native = {
-    useNativeQueue = true // if true, use native message queue, else use event plugin.
+    useNativeQueue = false // if true, use native message queue, else use event plugin.
     bindport = 5555 // bind port
     sendqueuelength = 1000 //max length of send queue
   }
 
-  path = "" // absolute path of plugin
-  server = "" // target server address to receive event triggers
+  path = "/Users/tron/workplace/java-tronSubmit/java-tronUseSubmit/develop_event_subscribe/eventplugin/plugins/kafkaplugin/build/libs/plugin-kafka-1.0.0.zip" // absolute path of plugin
+  server = "127.0.0.1:9092" // target server address to receive event triggers
   dbconfig = "" // dbname|username|password
   contractParse = true,
   topics = [
     {
       triggerName = "block" // block trigger, the value can't be modified
-      enable = false
+      enable = true
       topic = "block" // plugin topic, the value could be modified
     },
     {
@@ -550,6 +550,16 @@ event.subscribe = {
       triggerName = "solidity" // solidity block event trigger, the value can't be modified
       enable = true            // the default value is true
       topic = "solidity"
+    },
+    {
+      triggerName = "solidityevent"
+      enable = false
+      topic = "solidityevent"
+    },
+    {
+      triggerName = "soliditylog"
+      enable = true
+      topic = "soliditylog"
     }
   ]
 
