fix check style problem

--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -516,19 +516,19 @@ committee = {
 
 event.subscribe = {
   native = {
-    useNativeQueue = false // if true, use native message queue, else use event plugin.
+    useNativeQueue = true // if true, use native message queue, else use event plugin.
     bindport = 5555 // bind port
     sendqueuelength = 1000 //max length of send queue
   }
 
-  path = "/Users/tron/workplace/java-tronSubmit/java-tronUseSubmit/develop_event_subscribe/eventplugin/plugins/kafkaplugin/build/libs/plugin-kafka-1.0.0.zip" // absolute path of plugin
-  server = "127.0.0.1:9092" // target server address to receive event triggers
+  path = "" // absolute path of plugin
+  server = "" // target server address to receive event triggers
   dbconfig = "" // dbname|username|password
   contractParse = true,
   topics = [
     {
       triggerName = "block" // block trigger, the value can't be modified
-      enable = true
+      enable = false
       topic = "block" // plugin topic, the value could be modified
     },
     {
