TIP128: merge develop, mainly for pbft

--- a/framework/src/test/resources/config-test.conf
+++ b/framework/src/test/resources/config-test.conf
@@ -106,6 +106,8 @@ node {
   rpc {
     port = 50051
 
+    PBFTPort = 50072
+
     # Number of gRPC thread, default availableProcessors / 2
     # thread = 16
 
