fix check style

--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -553,7 +553,7 @@ event.subscribe = {
     },
     {
       triggerName = "solidityevent"
-      enable = false
+      enable = true
       topic = "solidityevent"
     },
     {
