fix default config

--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -553,12 +553,12 @@ event.subscribe = {
     },
     {
       triggerName = "solidityevent"
-      enable = true
+      enable = false
       topic = "solidityevent"
     },
     {
       triggerName = "soliditylog"
-      enable = true
+      enable = false
       topic = "soliditylog"
     }
   ]
