add config parameter allowUsingZkProofStore

--- a/framework/src/main/resources/config-localtest.conf
+++ b/framework/src/main/resources/config-localtest.conf
@@ -98,6 +98,8 @@ node {
 
   fullNodeAllowShieldedTransaction = true
 
+  allowUsingZkProofStore = true # used to accelerate zkproof verification
+
   zenTokenId = 1000001
 
   # check the peer data transfer ,disconnect factor
