remove unuse code

--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -166,7 +166,7 @@ node {
     fullNodePort = 8090
     solidityEnable = true
     solidityPort = 8091
-    statisticsSRRewardSwitch = true // a switch for statistics SR reward which is usually to set false
+    statisticsSRRewardSwitch = false // a switch for statistics SR reward which is usually to set false
   }
 
   rpc {
