--- a/consensus/build.gradle
+++ b/consensus/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     testImplementation "org.testng:testng:$testNgVersion"
     compile "org.slf4j:jcl-over-slf4j:$slf4jVersion"
     compile "com.madgag.spongycastle:core:1.58.0.0"
-    compile 'com.github.tronprotocol:zksnark-java-sdk:add_final_check_new-SNAPSHOT'
+    compile 'com.github.tronprotocol:zksnark-java-sdk:master-SNAPSHOT'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
 }
 
