mofity the block header sync

--- a/framework/src/main/resources/config-localtest5.conf
+++ b/framework/src/main/resources/config-localtest5.conf
@@ -264,7 +264,7 @@ localwitness = [
 
 block = {
   needSyncCheck = false
-  maintenanceTimeInterval = 21600000
+  maintenanceTimeInterval = 300000 // 21600000
   proposalExpireTime = 259200000 // 3 day: 259200000(ms)
 }
 
