add two functions to verify proof

--- a/chainbase/build.gradle
+++ b/chainbase/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile "org.fusesource.jansi:jansi:$jansiVersion"
     compile group: 'org.rocksdb', name: 'rocksdbjni', version: '5.15.10'
     compile group: 'com.typesafe', name: 'config', version: '1.3.2'
-    compile 'com.github.tronprotocol:zksnark-java-sdk:master-SNAPSHOT'
+    compile 'com.github.tronprotocol:zksnark-java-sdk:add_verify_proof_without_ctx-SNAPSHOT'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.5'
     compile project(":protocol")
