--- a/actuator/build.gradle
+++ b/actuator/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
     compile "org.slf4j:jcl-over-slf4j:$slf4jVersion"
     compile "com.madgag.spongycastle:core:1.58.0.0"
-    compile 'com.github.tronprotocol:zksnark-java-sdk:add_verify_proof_without_ctx-SNAPSHOT'
+    compile 'com.github.tronprotocol:zksnark-java-sdk:master-SNAPSHOT'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
     compile 'org.reflections:reflections:0.9.11'
 }
