--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     compile "io.vavr:vavr:0.9.2"
     compile group: 'org.pf4j', name: 'pf4j', version: '2.5.0'
 
+    // kafka
+    compile "org.apache.kafka:kafka-clients:0.10.2.2"
+
     compile group: 'org.zeromq', name: 'jeromq', version: '0.5.0'
     compile 'com.github.tronprotocol:zksnark-java-sdk:master-SNAPSHOT'
     compile project(":chainbase")
