--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -72,6 +72,14 @@ storage {
     bak2path = "bak2/database"
     frequency = 10000   // indicate backup db once every 10000 blocks processed.
   }
+
+  # influxdb configs
+  influxdb = {
+    ip = "127.0.0.1"
+    port = 8086
+    database = "metrics"
+    metricsReportInterval = 10
+  }
 }
 
 node.discovery = {
