add the shielded transaction api

--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -559,3 +559,15 @@ event.subscribe = {
     ]
   }
 }
+
+# add the monitor for shielded transactions
+monitor {
+  # shielded transaction
+  monitorShieldCheckLog = true
+
+  # shielded TRC20 contract transaction
+  trc20ContractAddress = "TXYZopYRdj2D9XRtbG411XZZ3kM5VkAeBf"
+  shieldedTrc20ContractAddress = "TVaWGs55FAhms53ChyXtU1TNVcfEZcskos"
+}
+
+
