--- a/rosetta-api/build.gradle
+++ b/rosetta-api/build.gradle
@@ -29,9 +29,14 @@ sourceCompatibility = 1.8
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.springframework', name: 'spring-web', version: '4.2.4.RELEASE'
+   // compile group: 'org.springframework', name: 'spring-web', version: '4.2.4.RELEASE'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.8.0'
     compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.5'
+    compile group: 'org.openapitools', name: 'jackson-databind-nullable', version: '0.1.0'
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.11'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.1.RELEASE'
 }
 
 ext {
