update jengelman shadow version to 5.2.0

--- a/rosetta-api/build.gradle
+++ b/rosetta-api/build.gradle
@@ -56,6 +56,10 @@ openApiGenerate {
     configOptions = [
             dateLibrary: "java8"
     ]
+
+    groupId = "tronprotocol"
+    id = "tron-rosetta-api"
+    version = "1.0.0"
 }
 
 sourceSets {
