Lite fullnode Implementation (#3031)
* TIP128: finish split&checkpoint

* TIP128: finish the transactionCache initial logic

* TIP128: finish history merge into snapshot

* TIP128: add jcommander tool

* TIP128: bugfix: multi processes copy file problem

* TIP128: bugfix and refactor some code

* TIP128: add build logic

* TIP128: finish http&GRPC filter, also fix some bugs & unit test

* TIP128: fix some bugs & unit test

* TIP128: improve unit test coverage

* TIP128: fix sonar check, redirect log output

* TIP128: bugfix, set validContractProtoThreadNum default value

* TIP128: add filter in RpcApiServiceOnSolidity

* TIP128: optimize logs output

* TIP128: merge develop, mainly for pbft

* TIP128: optimize snapshot dbs list

* TIP128: optimize snapshot dbs list

* TIP128: remove unnecessary code

* TIP128: bugfix: using copy if creating hard link failed

* bugfix: adjust the order of the http filters

--- a/framework/src/test/resources/config-test.conf
+++ b/framework/src/test/resources/config-test.conf
@@ -96,8 +96,17 @@ node {
     version = 43 # 43: testnet; 101: debug
   }
 
+  http {
+      fullNodeEnable = true
+      fullNodePort = 8090
+      solidityEnable = true
+      solidityPort = 8091
+  }
+
   rpc {
     port = 50051
+
+    PBFTPort = 50072
 
     # Number of gRPC thread, default availableProcessors / 2
     # thread = 16
