--- a/framework/src/main/resources/config-localtest.conf
+++ b/framework/src/main/resources/config-localtest.conf
@@ -57,7 +57,7 @@ storage {
 node.discovery = {
   enable = true
   persist = true
-  bind.ip = "127.0.0.1"
+  bind.ip = ""
   external.ip = null
 }
 
