--- a/framework/src/test/resources/config-localtest.conf
+++ b/framework/src/test/resources/config-localtest.conf
@@ -58,7 +58,7 @@ storage {
 node.discovery = {
   enable = true
   persist = true
-  bind.ip = ""
+  bind.ip = "127.0.0.1"
   external.ip = null
 }
 
