--- a/framework/src/test/resources/config-localtest.conf
+++ b/framework/src/test/resources/config-localtest.conf
@@ -59,7 +59,7 @@ node.discovery = {
   enable = true
   persist = true
   bind.ip = "127.0.0.1"
-  external.ip = null
+  external.ip = "46.168.1.1"
 }
 
 node.backup {
