Change sendcoin from 1 V all new address to 1 V mainnet active account

--- a/stress.conf
+++ b/stress.conf
@@ -24,6 +24,7 @@ dextokenid = 1003230
   zentokenid = 1001872
 commonexchangeid = 180
   zenTokenFee = 3
+  mainnetAccountFile = stress_account_sample.csv
 }
 
 privateKey = {
@@ -89,10 +90,10 @@ stressType=
     marketSell = 6
   }
 
-stressType1 =
+stressType111 =
   {
-    Sencoin(SingleSign) = 10
-    TriggerContract(transferTokenWithSingleSign) = 90
+    Sencoin(SingleSign) = 94
+    TriggerContract(transferTokenWithSingleSign) = 6
   }
 
 stressType2 =
