Change trc20 transfer from single contract address to 200 contract and different toAddress

--- a/stress.conf
+++ b/stress.conf
@@ -25,6 +25,7 @@ dextokenid = 1003230
 commonexchangeid = 180
   zenTokenFee = 3
   mainnetAccountFile = stress_account_sample.csv
+  trc20ContractAddressFile = trc20Contract.csv
 }
 
 privateKey = {
@@ -57,7 +58,7 @@ permissioner = {
 }
 
 
-stressType=
+stressType22222=
   {
     ExtCodeHash = 2
     TriggerContract(transferTokenWithSingleSign) = 55
@@ -90,10 +91,10 @@ stressType=
     marketSell = 6
   }
 
-stressType111 =
+stressType =
   {
-    Sencoin(SingleSign) = 94
-    TriggerContract(transferTokenWithSingleSign) = 6
+    Sencoin(SingleSign) = 6
+    transferTRC20 = 94
   }
 
 stressType2 =
@@ -175,6 +176,7 @@ className = {
 
 fullnode = {
   ip.list = [
+    #"47.94.243.150:50051",
     "10.40.10.244:50051",
     "10.40.10.242:50051",
     "10.40.10.237:50051",
