Add justlink and justswap transaction

--- a/stress.conf
+++ b/stress.conf
@@ -16,6 +16,9 @@ address = {
   exchangeOwnerAddress = TDZdB4ogHSgU1CGrun8WXaMb2QDDkvAKQm
   triggerOwnerAddress = TDZdB4ogHSgU1CGrun8WXaMb2QDDkvAKQm
   delegateResourceAddress = TDZdB4ogHSgU1CGrun8WXaMb2QDDkvAKQm
+  aggContractAddress = TYF3ayAEDQho7r6XhmKfqDb8tpwaAGhoTN
+  jstAddress = TYF3ayAEDQho7r6XhmKfqDb8tpwaAGhoTN
+  tstExchangeAddress = TYF3ayAEDQho7r6XhmKfqDb8tpwaAGhoTN
 }
 
 param = {
@@ -108,6 +111,21 @@ stressType3 =
     marketSell = 100
   }
 
+stressType4 =
+  {
+    TriggerJustlink = 100
+  }
+
+stressType5 =
+  {
+    TriggerJustswap = 100
+  }
+
+stressType6 =
+  {
+    TriggerJustlink = 50
+    TriggerJustswap = 50
+  }
 
 type2IdName = {
   ExtCodeHash = ExtCodeHash
@@ -139,6 +157,8 @@ type2IdName = {
   updateEnergyLimit = updateEnergyLimit
   ShieldSendToken(P2S) = PubliceToShield
   marketSell = marketSell
+  TriggerJustlink = TriggerJustlink
+  TriggerJustswap = TriggerJustswap
 }
 
 
@@ -172,6 +192,8 @@ className = {
   transferTRC20 = "org.tron.stresstest.dispatch.creator.contract.TransferTrc20Creator"
   PubliceToShield = "org.tron.stresstest.dispatch.creator.asset.ShieldTransactionCreator"
   marketSell = "org.tron.stresstest.dispatch.creator.dex.marketSellTransactionCreator"
+  TriggerJustlink = "org.tron.stresstest.dispatch.creator.contract.TriggerJustlinkContractCreator"
+  TriggerJustlink = "org.tron.stresstest.dispatch.creator.contract.TriggerJustswapContractCreator"
 }
 
 fullnode = {
