--- a/stress.conf
+++ b/stress.conf
@@ -193,7 +193,7 @@ className = {
   PubliceToShield = "org.tron.stresstest.dispatch.creator.asset.ShieldTransactionCreator"
   marketSell = "org.tron.stresstest.dispatch.creator.dex.marketSellTransactionCreator"
   TriggerJustlink = "org.tron.stresstest.dispatch.creator.contract.TriggerJustlinkContractCreator"
-  TriggerJustlink = "org.tron.stresstest.dispatch.creator.contract.TriggerJustswapContractCreator"
+  TriggerJustswap = "org.tron.stresstest.dispatch.creator.contract.TriggerJustswapContractCreator"
 }
 
 fullnode = {
