Add justlink and justswap transaction

--- a/stress.conf
+++ b/stress.conf
@@ -61,7 +61,7 @@ permissioner = {
 }
 
 
-stressType22222=
+stressType=
   {
     ExtCodeHash = 2
     TriggerContract(transferTokenWithSingleSign) = 55
@@ -92,6 +92,8 @@ stressType22222=
     transferTRC20 = 0
     ShieldSendToken(P2S) = 0
     marketSell = 6
+    TriggerJustlink = 0
+    TriggerJustswap = 0
   }
 
 stressType111 =
@@ -121,7 +123,7 @@ stressType5 =
     TriggerJustswap = 100
   }
 
-stressType =
+stressType6 =
   {
     TriggerJustlink = 50
     TriggerJustswap = 50
