--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -73,7 +73,7 @@ storage {
     frequency = 10000   // indicate backup db once every 10000 blocks processed.
   }
 
-  balance.history.lookup = true
+  balance.history.lookup = false
 }
 
 node.discovery = {
