support changing allowMarketTransaction in config

--- a/framework/src/main/resources/config-localtest.conf
+++ b/framework/src/main/resources/config-localtest.conf
@@ -277,6 +277,7 @@ committee = {
   allowTvmConstantinople = 1
   allowTvmSolidity059 = 1
   allowMarketTransaction = 1
+  allowTransactionFeePool = 1
 }
 
 log.level = {
