add vote power parameter

--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -50,6 +50,8 @@ storage {
 
   needToUpdateAsset = true
 
+  needToUpdateVotePower = true
+
   //dbsettings is needed when using rocksdb as the storage implement (db.version=2 and db.engine="ROCKSDB").
   //we'd strongly recommend that do not modify it unless you know every item's meaning clearly.
   dbSettings = {
