add config change Tron.proto

--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -74,7 +74,6 @@ storage {
   }
 
   balance.history.lookup = false
-
 }
 
 node.discovery = {
@@ -109,7 +108,7 @@ node {
   # trust node for solidity node
   # trustNode = "ip:port"
   trustNode = "127.0.0.1:50051"
-
+  openTransactionSort = true
   # expose extension api to public or not
   walletExtensionApi = true
 
