Revert "remove Gradle deprecation warnings"
This reverts commit f4eb528f71106876ff9fcc8cbb9c3b9648f28b68.

--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -135,6 +135,7 @@ test {
         exceptionFormat = 'full'
     }
     jacoco {
+        append = true
         destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
         classDumpDir = file("$buildDir/jacoco/classpathdumps")
     }
@@ -164,6 +165,7 @@ task stest(type: Test) {
     }
 
     jacoco {
+        append = false
         destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
         classDumpDir = file("$buildDir/jacoco/classpathdumps")
     }
@@ -184,7 +186,7 @@ jacocoTestReport {
         csv.enabled false
         html.destination file("${buildDir}/jacocoHtml")
     }
-    executionData.from = 'build/jacoco/jacocoTest.exec'
+    executionData = files('build/jacoco/jacocoTest.exec')
 }
 
 def binaryRelease(taskName, jarName, mainClass) {
