--- a/actuator/build.gradle
+++ b/actuator/build.gradle
@@ -72,11 +72,11 @@ jacocoTestReport {
         xml.enabled = true
         html.enabled = true
     }
-    executionData.from = '../framework/build/jacoco/jacocoTest.exec'
+    executionData = files('../framework/build/jacoco/jacocoTest.exec')
     afterEvaluate {
-        classDirectories.from = classDirectories.files.collect {
+        classDirectories = files(classDirectories.files.collect {
             fileTree(dir: it,)
-        }
+        })
     }
 }
 
