--- a/common/build.gradle
+++ b/common/build.gradle
@@ -53,10 +53,10 @@ jacocoTestReport {
         xml.enabled = true
         html.enabled = true
     }
-    executionData.from = '../framework/build/jacoco/jacocoTest.exec'
+    executionData = files('../framework/build/jacoco/jacocoTest.exec')
     afterEvaluate {
-        classDirectories.from = classDirectories.files.collect {
+        classDirectories = files(classDirectories.files.collect {
             fileTree(dir: it,)
-        }
+        })
     }
 }
