--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version: '4.1.1'
     // end http
 
+    implementation('com.github.briandilley.jsonrpc4j:jsonrpc4j:1.6')
+
     compile "io.vavr:vavr:0.9.2"
     compile group: 'org.pf4j', name: 'pf4j', version: '2.5.0'
 
