--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -81,6 +81,9 @@ dependencies {
 
     implementation('com.github.briandilley.jsonrpc4j:jsonrpc4j:1.6')
 
+    // https://mvnrepository.com/artifact/javax.portlet/portlet-api
+    compileOnly group: 'javax.portlet', name: 'portlet-api', version: '2.0'
+
     compile "io.vavr:vavr:0.9.2"
     compile group: 'org.pf4j', name: 'pf4j', version: '2.5.0'
 
