--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -79,10 +79,12 @@ dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version: '4.1.1'
     // end http
 
-    implementation('com.github.briandilley.jsonrpc4j:jsonrpc4j:1.6')
+//    implementation('com.github.briandilley.jsonrpc4j:jsonrpc4j:1.6')
+    // https://mvnrepository.com/artifact/com.github.briandilley.jsonrpc4j/jsonrpc4j
+    compile group: 'com.github.briandilley.jsonrpc4j', name: 'jsonrpc4j', version: '1.6'
 
     // https://mvnrepository.com/artifact/javax.portlet/portlet-api
-    compileOnly group: 'javax.portlet', name: 'portlet-api', version: '2.0'
+    compileOnly group: 'javax.portlet', name: 'portlet-api', version: '3.0.1'
 
     compile "io.vavr:vavr:0.9.2"
     compile group: 'org.pf4j', name: 'pf4j', version: '2.5.0'
