--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -81,6 +81,9 @@ dependencies {
 
     compile "io.vavr:vavr:0.9.2"
     compile group: 'org.pf4j', name: 'pf4j', version: '2.5.0'
+    // https://mvnrepository.com/artifact/org.quartz-scheduler/quartz
+    compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
+
 
     compile group: 'org.zeromq', name: 'jeromq', version: '0.5.0'
     compile 'com.github.tronprotocol:zksnark-java-sdk:master-SNAPSHOT'
@@ -135,6 +138,7 @@ test {
         exceptionFormat = 'full'
     }
     jacoco {
+        append = true
         destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
         classDumpDir = file("$buildDir/jacoco/classpathdumps")
     }
@@ -164,6 +168,7 @@ task stest(type: Test) {
     }
 
     jacoco {
+        append = false
         destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
         classDumpDir = file("$buildDir/jacoco/classpathdumps")
     }
@@ -184,7 +189,7 @@ jacocoTestReport {
         csv.enabled false
         html.destination file("${buildDir}/jacocoHtml")
     }
-    executionData.from = 'build/jacoco/jacocoTest.exec'
+    executionData = files('build/jacoco/jacocoTest.exec')
 }
 
 def binaryRelease(taskName, jarName, mainClass) {
