--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -81,9 +81,6 @@ dependencies {
 
     compile "io.vavr:vavr:0.9.2"
     compile group: 'org.pf4j', name: 'pf4j', version: '2.5.0'
-    // https://mvnrepository.com/artifact/org.quartz-scheduler/quartz
-    compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
-
 
     compile group: 'org.zeromq', name: 'jeromq', version: '0.5.0'
     compile 'com.github.tronprotocol:zksnark-java-sdk:master-SNAPSHOT'
@@ -138,7 +135,6 @@ test {
         exceptionFormat = 'full'
     }
     jacoco {
-        append = true
         destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
         classDumpDir = file("$buildDir/jacoco/classpathdumps")
     }
@@ -168,7 +164,6 @@ task stest(type: Test) {
     }
 
     jacoco {
-        append = false
         destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
         classDumpDir = file("$buildDir/jacoco/classpathdumps")
     }
@@ -189,7 +184,7 @@ jacocoTestReport {
         csv.enabled false
         html.destination file("${buildDir}/jacocoHtml")
     }
-    executionData = files('build/jacoco/jacocoTest.exec')
+    executionData.from = 'build/jacoco/jacocoTest.exec'
 }
 
 def binaryRelease(taskName, jarName, mainClass) {
