--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 
     testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
 
-    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.68'
+    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.69'
 
     compile group: 'com.typesafe', name: 'config', version: '1.3.2'
 
@@ -199,6 +199,11 @@ def binaryRelease(taskName, jarName, mainClass) {
                 it.isDirectory() ? it : zipTree(it)
             }
         }
+
+        // exclude these files for bouncycastle
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
 
         manifest {
             attributes "Main-Class": "${mainClass}"
