--- a/common/build.gradle
+++ b/common/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile group: 'com.beust', name: 'jcommander', version: '1.72'
     compile group: 'com.typesafe', name: 'config', version: '1.3.2'
     compile group: leveldbGroup, name: leveldbName, version: leveldbVersion
+    compile group: 'org.rocksdb', name: 'rocksdbjni', version: '5.15.10'
     compile project(":protocol")
 }
 
