--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -17,8 +17,10 @@ task version(type: Exec) {
 dependencies {
     //local libraries
     compile fileTree(dir: 'libs', include: '*.jar')
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.13.0'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-junit', version: '1.0.0.1'
+    testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
     // https://mvnrepository.com/artifact/com.beust/jcommander
     compile group: 'com.beust', name: 'jcommander', version: '1.78'
 
@@ -60,6 +62,17 @@ task copyToParent(type: Copy) {
     into "../build/distributions"
     from "$buildDir/distributions"
     include "*.zip"
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        exceptionFormat = 'full'
+    }
+    jacoco {
+        destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
+        classDumpDir = file("$buildDir/jacoco/classpathdumps")
+    }
 }
 
 def binaryRelease(taskName, jarName, mainClass) {
