--- a/common/build.gradle
+++ b/common/build.gradle
@@ -36,7 +36,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.69'
+    compile "com.madgag.spongycastle:core:1.58.0.0"
+    compile "com.madgag.spongycastle:prov:1.58.0.0"
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.10.3'
     compile "com.cedarsoftware:java-util:1.8.0"
     compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version: '4.1.1'
@@ -44,6 +45,7 @@ dependencies {
     compile group: 'com.beust', name: 'jcommander', version: '1.72'
     compile group: 'com.typesafe', name: 'config', version: '1.3.2'
     compile group: leveldbGroup, name: leveldbName, version: leveldbVersion
+    compile group: 'org.rocksdb', name: 'rocksdbjni', version: '5.15.10'
     compile project(":protocol")
 }
 
