--- a/framework/src/main/resources/config-localtest.conf
+++ b/framework/src/main/resources/config-localtest.conf
@@ -152,6 +152,15 @@ node {
     # maxHeaderListSize =
   }
 
+  jsonrpc {
+    # httpFullNodeEnable = true
+    # httpFullNodePort = 8545
+    # httpSolidityEnable = true
+    # httpSolidityPort = 8555
+    # httpPBFTEnable = true
+    # httpPBFTPort = 8565
+  }
+
 }
 
 
