feat: add jsonrpc config

--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -216,6 +216,15 @@ node {
   # note: above APIs may return null even if blocks and transactions actually are on the blockchain
   # when opening on a lite fullnode. only open it if the consequences being clearly known
   # openHistoryQueryWhenLiteFN = false
+
+  jsonrpc {
+    # httpFullNodeEnable = true
+    # httpFullNodePort = 8545
+    # httpSolidityEnable = true
+    # httpSolidityPort = 8555
+    # httpPBFTEnable = true
+    # httpPBFTPort = 8565
+  }
 }
 
 ## rate limiter config
