feat: add disabledApi to config

--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -216,6 +216,14 @@ node {
   # note: above APIs may return null even if blocks and transactions actually are on the blockchain
   # when opening on a lite fullnode. only open it if the consequences being clearly known
   # openHistoryQueryWhenLiteFN = false
+
+  # disabled api list, it will work for http, rpc and pbft, both fullnode and soliditynode,
+  # but not jsonrpc.
+  # The setting is case insensitive, GetNowBlock2 is equal to getnowblock2
+  # disabledApi = [
+  #   "getaccount",
+  #   "getnowblock2"
+  # ]
 }
 
 ## rate limiter config
