--- a/framework/src/test/resources/config-test-index.conf
+++ b/framework/src/test/resources/config-test-index.conf
@@ -136,7 +136,12 @@ seed.node = {
 genesis.block = {
   # Reserve balance
   assets = [
-
+    {
+      accountName = "Blackhole"
+      accountType = "AssetIssue"
+      address = "27WtBq2KoSy5v8VnVZBZHHJcDuWNiSgjbE3"
+      balance = "-9223372036854775808"
+    }
   ]
 
   witnesses = [
