--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -226,9 +226,10 @@ node {
     # httpPBFTPort = 8565
   }
 
-  # disabled api list, it will work for http, rpc and pbft, both fullnode and soliditynode,
+  # Disabled api list, it will work for http, rpc and pbft, both fullnode and soliditynode,
   # but not jsonrpc.
-  # The setting is case insensitive, GetNowBlock2 is equal to getnowblock2
+  # Sample: The setting is case insensitive, GetNowBlock2 is equal to getnowblock2
+  #
   # disabledApi = [
   #   "getaccount",
   #   "getnowblock2"
