add more detail config for db

--- a/framework/src/test/resources/config-test-storagetest.conf
+++ b/framework/src/test/resources/config-test-storagetest.conf
@@ -22,6 +22,15 @@ storage {
   # the path of "output-directory" or which is set by "-d" ("--output-directory").
 
   # Attention: name is a required field that must be set !!!
+  default = {
+  maxOpenFiles = 50
+  }
+  defaultM = {
+  maxOpenFiles = 500
+  }
+  defaultL = {
+  maxOpenFiles = 1000
+  }
   properties = [
     {
       name = "account",
